# bfast-llm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_decoder.py  test_integration.py  test_patch.py  test_tune.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: auto-label.yml  docs.yml  release.yml  tests.yml  zizmor.yml
bfast_llm/: __init__.py  compressor.py  decoder.py  middleware.py  proxy.py  registry.py  summarizer.py  tool.py
docs/: api.md  getting_started.md  index.md
docs/pt/: mkdocs.yml
docs/pt/docs/: api.md  getting_started.md  index.md
tests/: test_decoder.py  test_integration.py  test_registry.py  test_summarizer.py  test_tune.py
